@@ -8,16 +8,10 @@ package es.upm.woa.agent.group1;
 import es.upm.woa.agent.group1.map.CellTranslation;
 import es.upm.woa.agent.group1.map.MapCell;
 import es.upm.woa.agent.group1.protocol.CommunicationStandard;
-import es.upm.woa.agent.group1.protocol.Conversation;
 import es.upm.woa.agent.group1.strategy.Strategy;
-import static es.upm.woa.agent.group1.strategy.Strategy.HIGH_PRIORITY;
-import static es.upm.woa.agent.group1.strategy.Strategy.LOW_PRIORITY;
-import es.upm.woa.ontology.Building;
-import es.upm.woa.ontology.CreateUnit;
-import es.upm.woa.ontology.GameOntology;
-import jade.content.onto.basic.Action;
+
 import jade.core.AID;
-import jade.lang.acl.ACLMessage;
+
 import java.util.List;
 import java.util.logging.Level;
 
